<resources>
    <string name="app_name">To-Do App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Kamilyam Nazarkhanova</string>
    <string name="email">nazarhanovak@gmail.com</string>
    <string name="good_morning">Good morning 👋</string>
    <string name="good_afternoon">Good afternoon 👋</string>
    <string name="good_evening">Good evening 👋</string>
    <string name="good_night">Good night 👋</string>
    <string name="statistics">Statistics</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="all">All</string>
    <string name="tasks_completed">Tasks Completed</string>
    <string name="completion_rate">Completion rate</string>
    <string name="tasks">Tasks</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="change_password">Change password</string>
    <string name="preferences">Preferences</string>
    <string name="theme">Theme</string>
    <string name="color_scheme">Color scheme</string>
    <string name="more">More</string>
    <string name="feedback">Feedback</string>
    <string name="rate">Rate</string>
    <string name="support">Support</string>
    <string name="FAQ">FAQ</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="about_us">About us</string>
    <string name="log_out">Log out</string>
    <string name="version">Version</string>
    <string name="edit_profile">Edit profile</string>
    <string name="write_your_description">Write your description</string>
</resources>