<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.StatisticsFragment">

    <Toolbar
        android:id="@+id/top_menu"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:titleTextColor="#FEFAFD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow_left"
            app:iconTint="#7A7373"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="8dp">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:fontFamily="@font/plus_jakarta_sans_wght"
            android:text="@string/statistics"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

    </Toolbar>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="top"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_menu" />

    <LinearLayout
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_outline_2"
        android:backgroundTint="@color/grey"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <TextView
            android:id="@+id/weekly_statistics"
            android:layout_width="90dp"
            android:layout_height="42dp"
            android:layout_margin="2dp"
            android:background="@drawable/round_outline_2"
            android:fontFamily="@font/plus_jakarta_sans_wght"
            android:gravity="center"
            android:text="@string/weekly"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="@color/grey">

        </TextView>

        <TextView
            android:id="@+id/monthly_statistics"
            android:layout_width="90dp"
            android:layout_height="42dp"
            android:layout_margin="2dp"
            android:background="@drawable/round_outline_2"
            android:fontFamily="@font/plus_jakarta_sans_wght"
            android:gravity="center"
            android:text="@string/monthly"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="@color/white">

        </TextView>

        <TextView
            android:id="@+id/yearly_statistics"
            android:layout_width="90dp"
            android:layout_height="42dp"
            android:layout_margin="2dp"
            android:background="@drawable/round_outline_2"
            android:fontFamily="@font/plus_jakarta_sans_wght"
            android:gravity="center"
            android:text="@string/yearly"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="@color/grey">

        </TextView>

        <TextView
            android:id="@+id/all_statistics"
            android:layout_width="90dp"
            android:layout_height="42dp"
            android:layout_margin="2dp"
            android:background="@drawable/round_outline_2"
            android:fontFamily="@font/plus_jakarta_sans_wght"
            android:gravity="center"
            android:text="@string/all"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="@color/grey">

        </TextView>

    </LinearLayout>

    <TextView
        android:id="@+id/numCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/plus_jakarta_sans_wght"
        android:gravity="bottom"
        android:text="418"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="@id/options"
        app:layout_constraintTop_toBottomOf="@id/options"

        >

    </TextView>

    <TextView
        android:id="@+id/numAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/plus_jakarta_sans_wght"
        android:text="/418"
        android:textColor="@color/dark_grey"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/numCompleted"
        app:layout_constraintTop_toBottomOf="@id/options">

    </TextView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plus_jakarta_sans_wght"
        android:text="@string/tasks_completed"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/numCompleted"
        app:layout_constraintTop_toBottomOf="@id/numCompleted">

    </TextView>


    <TextView
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/plus_jakarta_sans_wght"
        android:gravity="bottom"
        android:text="80"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"

        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@id/options">

    </TextView>

    <TextView
        android:id="@+id/percent_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/plus_jakarta_sans_wght"
        android:text="%"
        android:textColor="@color/dark_grey"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/rate"
        app:layout_constraintTop_toBottomOf="@id/options">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plus_jakarta_sans_wght"
        android:text="@string/completion_rate"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/rate"
        app:layout_constraintTop_toBottomOf="@id/rate">

    </TextView>

    <LinearLayout
        android:id="@+id/progress_bars"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/options"
        app:layout_constraintStart_toStartOf="@id/options"
        app:layout_constraintTop_toBottomOf="@id/options">

        <ProgressBar
            android:id="@+id/hobbyProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:progressDrawable="@drawable/red_progress_bar" />

        <ProgressBar
            android:id="@+id/personalProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:progressDrawable="@drawable/blue_progress_bar" />

        <ProgressBar
            android:id="@+id/lifestyleProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:progressDrawable="@drawable/green_progress_bar" />

        <ProgressBar
            android:id="@+id/workProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:progressDrawable="@drawable/yellow_progress_bar" />

        <ProgressBar
            android:id="@+id/nolistProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:progressDrawable="@drawable/grey_progress_bar" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/statistics_rv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/options"
        app:layout_constraintStart_toStartOf="@id/options"
        app:layout_constraintTop_toBottomOf="@id/progress_bars"
        tools:listitem="@layout/statistics_list_item">

    </androidx.recyclerview.widget.RecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>